tests/src/frontend/expand/invalid/macro_duplicate4.sk
class C(x: Int) {
  macro fun m(): void {
    #forEachField (#field, #thisClassName) {
      (#field, #thisClassName)
    }
  }
}

fun main(): void {
  void
}
